@@ -31,7 +31,7 @@ namespace gameswf
 
 
 		image::alpha* draw_bitmap(const FT_Bitmap& bitmap);
-		bitmap_info* get_char_image(Uint16 code, float* x_max, float* y_max, float* advance);
+		bitmap_info* get_char_image(Uint16 code, rect& box, float* advance);
 
 
 	private:
